Upgrade folder structure and .env file     - create a index.js file instead of a server/server.js file so simplify the deployement on the server     - modify .env file to deal with server database

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Ignore Node.js dependencies and build output
 node_modules/
+node_modules
 
 # Ignore editor/IDE specific files
 .idea/
 .vscode/
 *.swp
 *.bak
+.htaccess
 
 #Ignore api environmennr varuabke
 .env
